@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.image.kiosk" name="Kiosk" version="0.0.1" provider-name="Anonymous">
+<addon id="plugin.image.kiosk" name="Kiosk" version="0.0.2" provider-name="Anonymous">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
 	<import addon="plugin.image.pdfreader"/>
